--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "antd": "^5.21.4",
+    "aos": "^3.0.0-beta.6",
     "framer-motion": "^11.11.1",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
